--- a/profil.html
+++ b/profil.html
@@ -19,42 +19,6 @@
 </head>
 
 <body>
-  <!-- navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
-    <div class="container">
-      <a class="navbar-brand text-success" href="#">DISCUSS</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="container">
-        <div class="collapse navbar-collapse justify-content-center float-right" id="navbarSupportedContent">
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 mr-3 my-sm-0" type="submit">Search</button>
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item dropdown border border-white rounded bg-white">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <img src="images/foto_profil.png" class="rounded-circle" alt="">
-                  PKM OYE
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item active" href="#">Profile</a>
-                  <a class="dropdown-item" href="#">Settings</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Log Out</a>
-                </div>
-              </li>
-            </ul>
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </nav>
-  <!-- akhir navbar -->
-
   <!-- jumbotron -->
   <div class="jumbotron jumbotron-fluid jb1 shadow">
     <div class="container text-center">
@@ -74,6 +38,7 @@
               <h4>Haris Angriawan <img src="images/cek.jpg" class="rounded-circle " style="width:15px; height:auto;"
                   alt=""></h4>
               <p>Hey yuk diskusi !</p>
+              <a href="#" class="font-weight-light">www.discuss.id</a>
             </div>
             <div class="col-6 text-right my-auto"><button type="button" class="btn btn-success btn-lg"><img src="images/upload.png"
                   class=" img-thumbnail rounded-circle" style="width:30px;" alt=""> Upload</button></div>
@@ -86,7 +51,7 @@
   <!-- akhir info panel -->
 
   <!-- gallery konten -->
-  <div class="container-fluid bg-white konten">
+  <div class="container-fluid bg-white">
     <section class="gallery-block cards-gallery">
       <div class="container">
         <div class="row">
