--- a/index.html
+++ b/index.html
@@ -109,101 +109,9 @@
 
 </div> <!-- end menu-dropdown -->
 
-<div class="main">
-    <div class="container" style="padding-top:50px;padding-bottom: 50px">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card col-md-3">
-           <img class="img-thumbnail" src="images/vid.png" alt="Card image cap">
-            <div class="card-body">
-              <h5><b>Judul</b></h5>
-              <h6 class="card-subtitle mb-2 text-muted">Akun</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="card col-md-3">
-           <img class="img-thumbnail" src="images/vid.png" alt="Card image cap">
-            <div class="card-body">
-              <h5><b>Judul</b></h5>
-              <h6 class="card-subtitle mb-2 text-muted">Akun</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="card col-md-3">
-           <img class="img-thumbnail" src="images/vid.png" alt="Card image cap">
-            <div class="card-body">
-              <h5><b>Judul</b></h5>
-              <h6 class="card-subtitle mb-2 text-muted">Akun</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="card col-md-3">
-           <img class="img-thumbnail" src="images/vid.png" alt="Card image cap">
-            <div class="card-body">
-              <h5><b>Judul</b></h5>
-              <h6 class="card-subtitle mb-2 text-muted">Akun</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>    
-      </div>
-    </div>
-</div>
+
 <!-- end main -->
 
-<!--Footer-->
-<footer class="panel-footer">
-  <div class="footer-middle">
-  <div class="container">
-    <div class="row pb-3">
-      <div class="col-md-3 col-sm-6">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4><b>Discuss ID</b></h4>
-          <ul class="list-unstyled">
-            <li><a class="footext" href="tentang.html">Tentang Kami</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4><b>Beli</b></h4>
-          <ul class="list-unstyled">
-            <li><a class="footext" href="cara_berbelanja.html">Cara Berbelanja</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4><b>Bantuan</b></h4>
-          <ul class="list-unstyled">
-            <li><a class="footext" href="hubungi_kami.html">Hubungi Kami</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4><b>Keamanan</b></h4>
-          <ul class="list-unstyled">
-            
-
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="footer-bottom">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col p-2 m-1 copyright">&copy; Copyright 2018 - <a class="footext" href ="index.html"><b>Kutani</b></a>.  All rights reserved.</div>
-      </div>
-    </div>
-  </div>
-</footer>
 
 <!--Popup Masuk-->
 
@@ -318,7 +226,7 @@
 
     <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
 	<script src="js/bootstrap.js" type="text/javascript"></script>
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="js/ct-navbar.js"></script>
 	
 
