--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
  <div id="navbar-full">
     <div id="navbar">
-       <!--    
+       <!--    sgdsdgdgegwrwsds
         navbar-default can be changed with navbar-ct-blue navbar-ct-azzure navbar-ct-red navbar-ct-green navbar-ct-orange  
         -->
         <nav class="navbar navbar-ct-blue navbar-fixed-top navbar-transparent" role="navigation">
