--- a/upload.html
+++ b/upload.html
@@ -18,7 +18,7 @@
     </div>
         <h3>Preview</h3>
         <img src="" id="respond-1" alt="" height="200px" width="200px" class="center" style="display:none">
-        <video id="respond-2" width="400" controls class="center" style="display:none">
+        <video id="respond-2" width="400" class="center" style="display:none">
             <source src="" id="video_here">
                   Your browser does not support HTML5 video.
         </video>
